--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
 
   <body>
     <div id="root"></div>
+    <script src="/static/js/bundle.js"></script><script src="/static/js/vendors~main.chunk.js"></script><script src="/static/js/main.chunk.js"></script>
   </body>
 
 </html>
